Fixes rendering of mobile navigation on iOS

--- a/components/navigation/assets/styles/navigation.scss
+++ b/components/navigation/assets/styles/navigation.scss
@@ -206,17 +206,15 @@ $navigation-width-large: 600px;
     text-decoration: none;
     transition: $animation-speed-slow;
 
-    a,
-    &:visited {
-      color: $color-fg-on-dark;
-      text-decoration: none;
-      display: block;
-    }
-
-    a,
-    &:focus,
-    &:hover {
-      color: $color-fg-on-dark;
+    .#{$c-navigation}__link-fixed,
+    .#{$c-navigation}__link {
+      &:link,
+      &:focus,
+      &:visited {
+        display: block;
+        color: $color-fg-on-dark;
+        text-decoration: none;
+      }
     }
 
     @each $current-color in $color-tile-bg-list {
@@ -250,24 +248,22 @@ $navigation-width-large: 600px;
   // *****************************************************************************
 
   &__link {
-    display: block;
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    bottom: 10px;
-    left: 10px;
-
-    // Need this z-index as Safari flickers badly on the hover
-    // transform without it.
-    z-index: 98;
-    text-align: center;
-    transform: perspective( 1200px ) rotateY( 1deg );
     transition: $animation-speed-slow;
 
     align-items: center;
     vertical-align: middle;
 
     @include breakpoint($small) {
+      display: block;
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      bottom: 10px;
+      left: 10px;
+      z-index: 98;
+      text-align: center;
+      transform: perspective( 1200px ) rotateY( 1deg );
+
       transform: perspective( 1200px ) rotateY( 1deg );
 
       &:hover {
@@ -277,12 +273,6 @@ $navigation-width-large: 600px;
     }
 
     &:hover {
-      top: -2px;
-      z-index: 99;
-      background-color: $color-title-open-bg;
-      transform: perspective( 1200px ) rotateY( -1deg ) scale(1.02);
-      box-shadow: 0 10px 20px $color-shadows;
-
       @include breakpoint($small) {
         top: 7px;
         z-index: 99;
@@ -316,6 +306,7 @@ $navigation-width-large: 600px;
     // *****************************************************************************
 
     .#{$c-navigation}__tile {
+      width: 25%;
       height: auto;
       line-height: $mobile-nav-height;
       color: $color-tile-fg;
@@ -323,7 +314,6 @@ $navigation-width-large: 600px;
       text-decoration: none;
       transition: $animation-speed;
       vertical-align: middle;
-      width: 25%;
 
       @include breakpoint($small) {
         display: block;
